Rem "mais anteriormente adicionadas"

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -447,9 +447,7 @@ política parcial \pps\ pode invocar outras de modo a atingir seu
 objetivo, \pps\ é removida da pilha juntamente com as políticas
 parciais invocadas por ela.  A estratégia de remoção testa as
 políticas parciais para remoção partindo da base da pilha em direção
-ao topo, ou seja, prioriza a remoção das políticas parciais mais
-anteriormente adicionadas, como mostrado no Algoritmo
-\ref{alg:removedapilha}.
+ao topo, como mostrado no Algoritmo \ref{alg:removedapilha}.
 
 Propõe-se também um mecanismo de \emph{exploração interna} à política
 parcial, elaborada para atenuar o efeito de \emph{rigidez}
