--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -266,7 +266,7 @@ forte estrutura hierárquica \cite{imrl2004}, através da proposta de um
 algoritmo que utiliza em conjunto múltiplas técnicas de AR. Apesar da
 apresentação detalhada do papel da motivação intrínseca no
 aprendizado, não há uma investigação mais aprofundada dos diversos
-componentes de aprendizado envolvidos algoritmo, notadamente a
+componentes de aprendizado envolvidos no algoritmo, notadamente a
 estratégia de aplicação das políticas parciais aprendidas. Neste
 trabalho, investigamos essa questão, apresentando estratégias para a
 aplicação das políticas parciais aprendidas juntamente com a avaliação
