--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -373,7 +373,7 @@ forma conferindo a esta técnica um forte caráter hierárquico.
 A obtenção de políticas parciais pode ser realizada de forma
 automática simultaneamente à solução do problema original através da
 utilização de motivação intrínseca para identificação de subproblemas
-e correspondente aprendizado de políticas parciais.  O Agoritmo
+e correspondente aprendizado de políticas parciais.  O Algoritmo
 \ref{alg:imrl}, proposto em \cite{imrl2004} (IMRL), ao lado,
 implementa o conceito de \emph{recompensas intrínsecas}, representadas
 por $r^i$, recebidas quando ocorrem variações significativas de
