--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -543,7 +543,7 @@ executadas no estado em que o agente se encontra.
   \end{minipage}
 \end{wrapfigure}
 O domínio utilizado na avaliação experimental foi o \emph{Playroom}
-\cite{imrl2004}, em que o agente se econtra em um reticulado
+\cite{imrl2004}, em que o agente se encontra em um reticulado
 $5\times5$ e deve descobrir como ativar um \emph{alarme} interagindo
 com objetos aí presentes. O agente é composto de um \emph{olho}, uma
 \emph{mão} e um \emph{alvo} e possui sempre disponíveis as seguintes
@@ -826,7 +826,7 @@ Conhecimento
 \cite{beirigo2012,bergamo2011accelerating,bogdan2013forward,da2011geometric,da2011navigation,koga2013speeding,matos2011simultaneous,matos2011stochastic},
 que busca acelerar o aprendizado do agente através do reuso de
 características compartilhadas entre problemas distintos.  Como
-trabalhos futuros, pretende-se esteder o algoritmo para a solução de
+trabalhos futuros, pretende-se estender o algoritmo para a solução de
 uma classe de problemas, em que os subproblemas comuns são
 identificados e armazenados para uso futuro, dessa forma contribuindo
 para acelerar a obtenção das soluções.
