Melhor título: add AR

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -120,7 +120,8 @@
 % \newcommand{\grifar}[1]{\uwave{#1}}
 
 % Substituir pelo título quando estiver definido
-\newcommand{\titulo}{Estratégias para Aplicação de\\ Políticas Parciais com Motivação Intrínseca}
+\newcommand{\titulo}{Estratégias para Aplicação de Políticas Parciais
+    no \\ Aprendizado por Reforço com Motivação Intrínseca}
 
 %% Melhores comentários para o pacote algorithm
 \renewcommand{\algorithmiccomment}[1]{#1}
