Ref de AR agora é suttonrlbook

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -215,7 +215,7 @@
 \section{Introdução}
 Problemas nos quais o agente deve tomar uma série de decisões
 sequenciais podem ser resolvidos através de técnicas de Aprendizado
-por Reforço \cite{rlczaba} (AR), em que o agente recebe um reforço
+por Reforço (AR) \cite{rlsutton}, em que o agente recebe um reforço
 numérico indicando a qualidade de cada ação tomada.  Esse processo de
 aprendizado ocorre por tentativa e erro, no qual o agente alterna
 entre a \emph{aplicação} do conhecimento adquirido até o momento para
