--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -223,7 +223,7 @@ selecionar a melhor ação e a \emph{exploração} do ambiente, onde o
 agente experimenta novas ações, aumentando o seu conhecimento sobre o
 ambiente e o problema.  Apesar do sucesso apresentado na aplicação de
 técnicas AR a problemas reais
-\cite{tesauro1995tdgammon,barto1996elevator,scardua2002optimal,da2006inverse,abbeel2007helicopter},
+\cite{tesauro1995tdgammon,barto1996elevator,scardua2002optimal,abbeel2007helicopter},
 elas podem apresentar indesejada lentidão na obtenção das soluções
 \cite{barto2003hrl}.
  
