Melhor intro results

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -276,9 +276,8 @@ armazenamento da aplicação de políticas parciais através de uma
 estrutura de dados em forma de pilha, que armazena incrementalmente as
 políticas parciais utilizadas pelo agente.  Para o processo de
 terminação das políticas parciais e consequente remoção da pilha,
-investiga-se o papel da exploração nesse processo.  Os resultados
-experimentais obtidos sugerem a aplicabilidade das técnicas propostas
-para o aprendizado de políticas parciais com a utilização de \mi.
+investiga-se o papel da exploração interna, que é adicionada ao
+mecanismo de aplicação das políticas parciais por parte do agente.
 
 Este artigo está organizado da seguinte forma.  A Seção
 \ref{sec:fundamentosteoricos} apresenta os conceitos fundamentais
