--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -287,7 +287,7 @@ intrínseca.  A proposta apresentada no presente trabalho é descrita na
 Seção \ref{sec:proposta}.  A avaliação experimental da proposta e os
 resultados alcançados são descritos na Seção
 \ref{sec:avaliacaoexperimental}. Finalmente, a Seção
-\ref{sec:conclusao} apresenta as conclusões e direcionamentos futuros
+\ref{sec:conclusao} apresenta as conclusões e direcionamentos futuros.
 
 \section{Fundamentos Teóricos}\label{sec:fundamentosteoricos}
 Problemas de decisão sequencial são usualmente representados por um
