Rem referências a corroborações
Aspectos referenciados não são discutidos no artigo, mas só na
dissertação.

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -699,14 +699,12 @@ interna.
 Comparando-se os resultados apresentados pelo agente que aprendeu com
 o \alg\ utilizando $\epS=0,8$ e pelo agente que aprendeu com o
 Q-Learning, os dados presentes no gráfico sugerem uma desvantagem de
-desempenho final por parte do agente que aprendeu com o Q-Learning,
-corroborando os dados apresentados anteriormente, referentes à
-Figura~\ref{fig:mi}.  Entretanto, o desempenho inicial correspondente
-ao Q-Learning supera o do \alg, o que é revertido somente pouco antes
-da metade do experimento.  Esse resultado pode ser explicado pela
-sobrecarga representada pelo aprendizado das políticas parciais
-relacionada ao \alg, também corroborando os resultados anteriores
-apresentados na discussão relacionada à Figura~\ref{fig:mi}.
+desempenho final por parte do agente que aprendeu com o Q-Learning.
+Entretanto, o desempenho inicial correspondente ao Q-Learning supera o
+do \alg, o que é revertido somente pouco antes da metade do
+experimento.  Esse resultado pode ser explicado pela sobrecarga
+representada pelo aprendizado das políticas parciais relacionada ao
+\alg.
 
 Por outro lado, o agente que utilizou $\epS=0,4$ apresentou um
 desempenho inferior ao do Q-Learning, o que aponta uma característica
