Melhor espaçamento no título (pra impressão dele nos topos das páginas)

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -121,7 +121,7 @@
 
 % Substituir pelo título quando estiver definido
 \newcommand{\titulo}{Estratégias para Aplicação de Políticas Parciais
-    no \\ Aprendizado por Reforço com Motivação Intrínseca}
+    no~ \\ Aprendizado por Reforço com Motivação Intrínseca}
 
 %% Melhores comentários para o pacote algorithm
 \renewcommand{\algorithmiccomment}[1]{#1}
