--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -766,9 +766,9 @@ empilhá-las, como proposto neste trabalho.
     \end{center}
   \end{minipage}
 \end{wrapfigure}
-Os resultados são aprentados na Figura~\ref{fig:epsp}, que apresenta
-um gráfico análogo ao da Figura~\ref{fig:ep}, mas considerando os
-agentes que não utilizaram a pilha de políticas parciais.  Analisando
+Os resultados são apresentados na Figura~\ref{fig:epsp}, que contém um
+gráfico análogo ao da Figura~\ref{fig:ep}, mas considerando os agentes
+que não utilizaram a pilha de políticas parciais.  Analisando
 primeiramente o desempenho do agente que utilizou $\epS=1,0$, pode-se
 perceber que, ao não utilizar a pilha de políticas parciais, o agente,
 explorando $100\%$ das vezes em que aplicou as políticas parciais,
